  compiler, MinGW can be used to build Imager.
- fixed an inverted condition checking the giflib version, and 
  replaced a manual test skip in t/t105gif.t
- add tests to exercise hatch fills for floating images.  This code is
  mis-generated with the gcc 4.0 that ships with OS X 10.4
- work around junk that pkg-config sends to stderr on FreeBSD 4.10
- testimg/base.jpg was missing from the MANIFEST, causing test failures
- use a temp file to avoid messing with echo on Win32 when building
  META.yml
- add some Mac OS X notes to the README

0.45 Mon 30 May 2005
- t/t105gif.t wasn't handling buggy giflibs correctly

0.45_01
- give the colorcount() and maxcolors() methods their own entries and
  add them to the method index.
- added tiff_bitspersample and tiff_photometric tags to tiff images
  when read
- loading filter DLLs/DSOs had an off-by-one error allocating a buffer
  for the filename of the library (does anyone use this functionality?)
- remove old #if 0 code from Imager.xs
- convert t/t15color.t to Test::More
- prevent warnings when looking up a GIMP color with no palette
  parameter and $ENV{HOME} not set.
- added VERSION numbers to most .pms
- convert t/t104ppm.t to Test::More
- convert t/t107bmp.t to Test::More
- convert t/t108tga.t to Test::More
- error messages generated reading JPEG or PNG images are now
  available via errstr()
- implement/test/document set_file_limits()/get_file_limits() methods,
  which allow limits on the size of image files read.
- new example for convert() method based on Leolo's query
- implement getscanline(), setscanline() and getsamples() methods.
  These are low level methods for fast access to image data, based on
  existing C functions that Imager uses internally.

=================================================================

        For latest versions check the Imager-devel pages:
        http://imager.perl.org/

=================================================================
